debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium

  * Nothing yet...

 -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000

debhelper (9.20160814) unstable; urgency=medium

  * dh_installdocs: Apply patch from Sven Joachim to make
    --link-doc work again in compat 11 (See: #830309)
  * t: Apply patch from Sven Joachim to add some test cases
    to dh_installdocs's --link-doc behaviour.
    (Closes: #831465)
  * dh_installinit,dh_systemd_start: Apply patches from
    Peter Pentchev to make -R default in compat 10 (as
    documented, but not as implemented).
  * perl_{build,makemaker}.pm: Apply patch from Dominic
    Hargreaves to explicitly pass -I. to perl.  This is to
    assist with the fix for CVE-2016-1238.  (Closes: #832436)
  * dh_install: Clarify that "debian/not-installed" is not
    related to the --exclude parameter.
  * dh_install: Apply patch from Sven Joachim to support
    the "debian/tmp" prefix being optional in
    "debian/not-installed".  (Closes: #815506)
  * Dh_Lib.pm: Apply patch from Dominic Hargreaves to set
    PERL_USE_UNSAFE_INC to fix a further set of packages
    which fail to build with . removed from @INC.
    (Closes: #832436)
  * Dh_Buildsystems.pm: Enable auto-detection of the maven
    and gradle buildsystems (provided they are installed).
    Thanks to Emmanuel Bourg for the suggestion.
    (Closes: #801732)

 -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:19:35 +0000

debhelper (9.20160709) unstable; urgency=medium

  * Explicitly Build-Depends on perl:any for pod2man instead
    of relying on it implicitly via libdpkg-perl.
  * dh_shlibdeps: Clarify that -L is also useful for packages
    using debian/shlibs.local for private libraries.
  * dh_installdocs: Apply patch from Sven Joachim to fix a
    regression with --link-doc and installing extra
    documentation.  (Closes: #830309)
  * Apply patches from Michael Biebl to merge dh_systemd_enable