@@ -1,6 +1,9 @@
 debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
 
-  * Nothing yet...
+  * Dh_Lib.pm: Support a new named "beta-tester" compat level.
+    If you want to participate in beta testing of new compat
+    levels, please review "man 7 debhelper" for more
+    information.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000
 
